@@ -6,26 +6,13 @@ Class Start extends Controller {
     {   
         parent::__construct();
         parent::__global();
-                                 
-        loader::model('model_test');
-        loader::base_lib('parser');
-        
-        table::instance();
-        
-        $this->db->prep();
-        $this->db->query("SELECT * FROM articles WHERE id = '1'");
-        $this->db->exec();
-        
-        $this->db->query("SELECT * FROM articles");
-        
-        $this->output->profiler();
     }                                      
 
     public function index()
     {  
         $this->title = 'Welcome to Obullo Framework !';
         $this->meta .= meta('keywords', 'obullo, php5, framework');   // You can manually set head tags
-                                                                      // or globally using Global views. 
+                                                                      // in controller or in view files. 
         $this->head .= js('welcome.js');  
         $this->head .= content_script('welcome');
         
